--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -9,5 +9,8 @@ Hello!
 
 <a href="/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
 or <a href="/first/hello?name=Tom&surname=Jones">Request with parameters</a>
+
+<p th:text="${message}"></p>
+
 </body>
 </html>
