--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -5,7 +5,7 @@
     <title>New person</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/people}" th:object="@{person}">
+<form th:method="POST" th:action="@{/people}" th:object="${person}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <br/>
