--- a/src/main/webapp/WEB-INF/views/batch/test-batch-update.html
+++ b/src/main/webapp/WEB-INF/views/batch/test-batch-update.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Test</title>
 </head>
 <body>
 
-<a href="/test-atch-update/without">Ordinary update (x1000)</a>
+<a href="/test-batch-update/without">Ordinary update (x1000)</a>
 <br/>
-<a href="/test-atch-update/with">Batch update</a>
+<a href="/test-batch-update/with">Batch update</a>
 
 </body>
 </html>
